--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -40,7 +40,10 @@ kramdown:
 plugins:
   - jekyll-feed
   - jekyll-sitemap
-
+sass:
+  load_paths:
+    - _sass
+    - /Library/Ruby/Gems/2.6.0/gems/bootstrap-4.3.1
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
