--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -2,5 +2,9 @@
   href: /
 - text: Publications
   href: /publications/
-# - text: CV
-#   href: /assets/cv/Teehan_ResearchResume.pdf
+- text: CV
+  menu:
+  - text: Reseach CV
+    href: /assets/cv/Teehan_ResearchResume.pdf
+  - text: Software Engineering CV
+    href: /assets/cv/Teehan_EngineeringResume.pdf
