change banner color

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,7 @@ email: rsteehan@gmail.com           # Social icon in footer
 github_username: rteehas            # Social icon in footer
 colors:
   links: "#007bff"                      # Color for links: use a readable color that contrasts well with dark text
-  banner: "#007bff"                     # Background color for page banners: use color that contrasts well with white
+  banner: "#579ec6"                     # Background color for page banners: use color that contrasts well with white
   footer: "#6c757d"                     # Background color for footer: use color that contrasts well with white
 rounded_corners: true                   # Enable (default) rounded corners on boxes and buttons
 
