--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -2,6 +2,8 @@
   href: /
 - text: Publications
   href: /publications/
+- text: Projects
+  href: /projects/
 - text: CV
   menu:
   - text: Reseach CV
